hello-world-callout/external-callout-server.yaml
# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Service
metadata:
  name: external-callout
  labels:
    app: external-callout
spec:
  ports:
  - port: 50051
    name: grpc
  selector:
    app: external-callout
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-callout
spec:
  replicas: 1
  selector:
    matchLabels:
      app: external-callout  
  template:
    metadata:
      annotations:
        readiness.status.sidecar.istio.io/applicationPorts: '50051'
        readiness.status.sidecar.istio.io/initialDelaySeconds: '20'
        sidecar.istio.io/rewriteAppHTTPProbers: 'true'
      labels:
        app: external-callout
        version: v1
        managed-by: apigee
    spec:
      serviceAccountName: apps    
      containers:
      - image: gcr.io/$PROJECT_ID/external-callout
        imagePullPolicy: Always
        name: external-callout
        ports:
        - containerPort: 50051
        securityContext:
          runAsNonRoot: true
          runAsUser: 20001
          runAsGroup: 20000
          allowPrivilegeEscalation: false
          capabilities:
            # https://istio.io/latest/docs/ops/deployment/requirements/
            add:
              - NET_ADMIN
              - NET_RAW
            drop:
              - ALL
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            ephemeral-storage: 5000Ki
            cpu: 50m
            memory: 128Mi
      #serviceAccount: app-sa
      #serviceAccountName: app-sa  
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: cloud.google.com/gke-nodepool
                operator: In
                values:
                - apps
            weight: 100
