hello-world-callout/istio-definitions.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: external-callout-gateway
  namespace: apps
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - hosts:
    - external-callout.nandanks-serverless.internal
    port:
      name: backend-https-443
      number: 443
      protocol: HTTPS
    tls:
      credentialName: backend-credential
      mode: SIMPLE
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: external-callout-services
  namespace: apps
spec:
  gateways:
  - external-callout-gateway
  hosts:
  - external-callout.nandanks-serverless.internal
  http:
  - route:
    - destination:
        host: external-callout.apps.svc.cluster.local
        port:
          number: 50051
    timeout: 5s
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: external-callout-port
  namespace: apps
spec:
  host: external-callout.apps.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
